--- a/About.html
+++ b/About.html
@@ -61,16 +61,16 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">Social Media</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Youtube</a>
+                  <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="text-gray-600 hover:text-gray-800">Youtube</a>
                 </li>
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Instagram</a>
+                  <a href="https://www.instagram.com/spipixel12/" class="text-gray-600 hover:text-gray-800">Instagram</a>
                 </li>
                 <li>
                   <a onclick="document.location='Error Page.html'" class="text-gray-600 hover:text-gray-800">Facebook</a>
                 </li>
                 <li>
-                  <a  class="text-gray-600 hover:text-gray-800">About</a>
+                  <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
                 </li>
               </nav>
             </div>
@@ -78,7 +78,7 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a onclick="document.location='Index.html'" class="text-gray-600 hover:text-gray-800">Home</a>
+                  <a onclick="document.location='index.html'" class="text-gray-600 hover:text-gray-800">Home</a>
                 </li>
                 <li>
                   <a onclick="document.location='Contact.html'" class="text-gray-600 hover:text-gray-800">Contact</a>
