--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                <span class="font-semibold title-font text-gray-700">Social Sciencr</span>
+                <span class="font-semibold title-font text-gray-700">Social Sciencs</span>
                 <span class="text-sm text-gray-500">12 Jun 2019</span>
               </div>
               <div class="md:flex-grow">
@@ -102,16 +102,16 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">Social Media</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Youtube</a>
+                  <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="text-gray-600 hover:text-gray-800">Youtube</a>
                 </li>
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Instagram</a>
+                  <a href="https://www.instagram.com/spipixel12/" class="text-gray-600 hover:text-gray-800">Instagram</a>
                 </li>
                 <li>
                   <a onclick="document.location='Error Page.html'" class="text-gray-600 hover:text-gray-800">Facebook</a>
                 </li>
                 <li>
-                  <a  class="text-gray-600 hover:text-gray-800">About</a>
+                  <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
                 </li>
               </nav>
             </div>
@@ -119,7 +119,7 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a onclick="document.location='Index.html'" class="text-gray-600 hover:text-gray-800">Home</a>
+                  <a onclick="document.location='index.html'" class="text-gray-600 hover:text-gray-800">Home</a>
                 </li>
                 <li>
                   <a onclick="document.location='Contact.html'" class="text-gray-600 hover:text-gray-800">Contact</a>
