--- a/Login.html
+++ b/Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignIn</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="style.1.css">
 </head>
 <body>
@@ -14,19 +14,15 @@
     </div>
     <form method="post" name="google-sheet" >
         <h3>Welcome
-            <span> Please SignIn to your account</span>
+            <span> Please LogIn to your account</span>
         </h3>
-        <label for="username">Username</label>
-        <input type="username" placeholder="Enter username" id="username" name="Username">
-
         <label for="email">Email</label>
         <input type="email" placeholder="Enter email" id="email" name="Email">
 
         <label for="password">Password</label>
         <input type="password" placeholder="Enter password" id="password" name="Password">
 
-        <button>SignIn</button>
-        <label>If You have already account so<a href="Login.html"> login</a></label>
+        <button>Login</button>
     </form>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyH00HDlB1bArBqUhXzRvyH-W158sB1vr6vUYm2uNXTtoAmQnbuMhSKibKQS0UYluXmkw/exec'
