--- a/SignInError.html
+++ b/SignInError.html
@@ -14,7 +14,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span onclick="document.location='Index.html'" class="ml-3 text-xl">Spipixel</span>
+            <span onclick="document.location='index.html'" class="ml-3 text-xl">Spipixel</span>
           </a>
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
@@ -23,7 +23,7 @@
             <a onclick="document.location='About.html'" class="mr-5 hover:text-gray-900">About
             </a>
           </nav>
-          <button onclick="document.location='SignIn Page.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
+          <button onclick="document.location='SignIn.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -49,16 +49,16 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">Social Media</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Youtube</a>
+                  <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="text-gray-600 hover:text-gray-800">Youtube</a>
                 </li>
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Instagram</a>
+                  <a href="https://www.instagram.com/spipixel12/" class="text-gray-600 hover:text-gray-800">Instagram</a>
                 </li>
                 <li>
                   <a onclick="document.location='Error Page.html'" class="text-gray-600 hover:text-gray-800">Facebook</a>
                 </li>
                 <li>
-                  <a  class="text-gray-600 hover:text-gray-800">About</a>
+                  <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
                 </li>
               </nav>
             </div>
@@ -66,7 +66,7 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a onclick="document.location='Index.html'" class="text-gray-600 hover:text-gray-800">Home</a>
+                  <a onclick="document.location='index.html'" class="text-gray-600 hover:text-gray-800">Home</a>
                 </li>
                 <li>
                   <a onclick="document.location='Contact.html'" class="text-gray-600 hover:text-gray-800">Contact</a>
