--- a/Contact.html
+++ b/Contact.html
@@ -4,53 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Contact</title>
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="Contact.css">
 </head>
 <body>
-    <header class="text-gray-600 body-font">
-        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
-              <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-            </svg>
-            <span onclick="document.location='index.html'" class="ml-3 text-xl">Spipixel</span> 
-          </a>
-          <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-            <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
-            <a onclick="document.location='Contact.html'" class="mr-5 hover:text-gray-900">Contact</a>
-            <a onclick="document.location='Blog.html'" class="mr-5 hover:text-gray-900">Blogs</a>
-            <a onclick="document.location='About.html'" class="mr-5 hover:text-gray-900">About
-            </a>
-          </nav>
-          <button onclick="document.location='SignIn.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button>
-        </div>
-      </header>
+    <div class="container">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+    </div>
+    <form method="post" name="google-sheet" >
+        <h3>Feedback
+            <span>Enter your problem or message with email</span>
+        </h3>
+        <label for="email">Email</label>
+        <input type="email" placeholder="Enter email" id="email" name="Email">
 
-      <section class="text-gray-600 body-font relative">
-        <div class="absolute inset-0 bg-gray-300">
-          <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="j.png" style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>
-        </div>
-        <div class="container px-5 py-24 mx-auto flex">
-          <div class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md">
-            <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Feedback</h2>
-            <p class="leading-relaxed mb-5 text-gray-600">Post-Feedback to us and we try to fix it you problem</p>
-            <div class="relative mb-4">
-              <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-              <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-            </div>
-            <div class="relative mb-4">
-              <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
-              <textarea id="message" name="message" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
-            </div>
-            <button class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-            <p class="text-xs text-gray-500 mt-3">Spipixel team contact email is techdevloper02@gmail.com.</p>
-          </div>
-        </div>
-      </section>
+        <label class="message" for="message">Message</label>
+        <input type="message" placeholder="Enter message" id="message" name="Message">
+
+        <button>Login</button>
+        <h4>To contact Spipixel team you can follow this gmail<a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJqZhffTHRTtMkqCMctJBbHSNVWGxMtZPKQCrzmtJCQznfWMsBxvFkvxMPcHDZfFKSJNTLq"> techdevloper02@gmail.com</a> </h4>
+        <h5>To Back<a href="index.html"> In Home Page</a></h5>
+    </form>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyH00HDlB1bArBqUhXzRvyH-W158sB1vr6vUYm2uNXTtoAmQnbuMhSKibKQS0UYluXmkw/exec'
+        const form = document.forms['google-sheet']
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
+            .catch(error => console.error('Error!', error.message))
+        })
+</script>    
 </body>
 </html>
