--- a/Error Page.html
+++ b/Error Page.html
@@ -18,11 +18,11 @@
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
         <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
         <a onclick="document.location='Contact.html'" class="mr-5 hover:text-gray-900">Contact</a>
-        <a onclick="document.location='Blog.html'" class="mr-5 hover:text-gray-900">Blogs</a>
+        <a onclick="document.location='Error Page.html'" class="mr-5 hover:text-gray-900">Blogs</a>
         <a onclick="document.location='About.html'" class="mr-5 hover:text-gray-900">About
         </a>
       </nav>
-      <button onclick="document.location='SignIn Page.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
+      <button onclick="document.location='SignIn.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
           <path d="M5 12h14M12 5l7 7-7 7"></path>
         </svg>
@@ -71,7 +71,7 @@
               <a onclick="document.location='Contact.html'" class="text-gray-600 hover:text-gray-800">Contact</a>
             </li>
             <li>
-              <a onclick="document.location='Blog.html'" class="text-gray-600 hover:text-gray-800">Blog</a>
+              <a onclick="document.location='Error Page.html'" class="text-gray-600 hover:text-gray-800">Blog</a>
             </li>
             <li>
               <a onclick="document.location='About.html'" class="text-gray-600 hover:text-gray-800">About</a>
