--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 <body>
+  <div class="container">
+    <div class="circle11"></div>
+    <div class="circle22"></div>
+</div>
     <header class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -19,7 +24,7 @@
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
             <a onclick="document.location='Contact.html'" class="mr-5 hover:text-gray-900">Contact</a>
-            <a onclick="document.location='Blog.html'" class="mr-5 hover:text-gray-900">Blogs</a>
+            <a onclick="document.location='Error Page.html'" class="mr-5 hover:text-gray-900">Blogs</a>
             <a onclick="document.location='About.html'" class="mr-5 hover:text-gray-900">About
             </a>
           </nav>
@@ -125,7 +130,7 @@
                   <a onclick="document.location='Contact.html'" class="text-gray-600 hover:text-gray-800">Contact</a>
                 </li>
                 <li>
-                  <a onclick="document.location='Blog.html'" class="text-gray-600 hover:text-gray-800">Blog</a>
+                  <a onclick="document.location='Error Page.html'" class="text-gray-600 hover:text-gray-800">Blog</a>
                 </li>
                 <li>
                   <a onclick="document.location='About.html'" class="text-gray-600 hover:text-gray-800">About</a>
