--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </button>
         </div>
       </header>
-
+<form>
     <section class="text-gray-600 body-font overflow-hidden">
         <div class="container px-5 py-24 mx-auto">
           <div class="-my-8 divide-y-2 divide-gray-100">
@@ -90,6 +90,7 @@
           </div>
         </div>
       </section>
+    </form>
 <hr>
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
