--- a/Science.html
+++ b/Science.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Science</title>
+    <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 <body>
     <header class="text-gray-600 body-font">
