--- a/Science.html
+++ b/Science.html
@@ -20,7 +20,7 @@
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
             <a onclick="document.location='Contact.html'" class="mr-5 hover:text-gray-900">Contact</a>
-            <a onclick="document.location='Error Page.html'" class="mr-5 hover:text-gray-900">Blogs</a>
+            <a onclick="document.location='Shop.html'" class="mr-5 hover:text-gray-900">Shop</a>
             <a onclick="document.location='About.html'" class="mr-5 hover:text-gray-900">About
             </a>
           </nav>
@@ -199,7 +199,7 @@
                 <a onclick="document.location='Contact.html'" class="text-gray-600 hover:text-gray-800">Contact</a>
               </li>
               <li>
-                <a onclick="document.location='Error Page.html'" class="text-gray-600 hover:text-gray-800">Blog</a>
+                <a onclick="document.location='Shop.html'" class="text-gray-600 hover:text-gray-800">Shop</a>
               </li>
               <li>
                 <a onclick="document.location='About.html'" class="text-gray-600 hover:text-gray-800">About</a>
