--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span onclick="document.location='Index.html'" class="ml-3 text-xl">Spipixel</span>
+            <span href="index.html" class="ml-3 text-xl">Spipixel</span>
           </a>
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
-            <a onclick="document.location='Contact.html'" class="mr-5 hover:text-gray-900">Contact</a>
-            <a onclick="document.location='Shop.html'" class="mr-5 hover:text-gray-900">Shop</a>
-            <a onclick="document.location='About.html'" class="mr-5 hover:text-gray-900">About
+            <a href="Contact.html" class="mr-5 hover:text-gray-900">Contact</a>
+            <a href="Shop.html" class="mr-5 hover:text-gray-900">Shop</a>
+            <a href="About.html" class="mr-5 hover:text-gray-900">About
             </a>
           </nav>
           <button onclick="document.location='SignIn.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
@@ -42,12 +42,12 @@
             <div class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
                 <span class="font-semibold title-font text-gray-700">Science</span>
-                <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
+                <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
               </div>
               <div class="md:flex-grow">
                 <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Science Free Download From Here</h2>
                 <p class="leading-relaxed">This Page you can find all Chapters of Science notes </p>
-                <a onclick="document.location='Science.html'" class="text-indigo-500 inline-flex items-center mt-4">Download
+                <a href="Science.html" class="text-indigo-500 inline-flex items-center mt-4">Download
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -58,12 +58,12 @@
             <div class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
                 <span class="font-semibold title-font text-gray-700">Maths</span>
-                <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
+                <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
               </div>
               <div class="md:flex-grow">
                 <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE MAths Free Download From Here</h2>
                 <p class="leading-relaxed">This Page you can find all Chapters of MAths notes</p>
-                <a onclick="document.location='Error Page.html'"  class="text-indigo-500 inline-flex items-center mt-4">Download
+                <a href="Error Page.html"  class="text-indigo-500 inline-flex items-center mt-4">Download
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -74,12 +74,12 @@
             <div class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
                 <span class="font-semibold title-font text-gray-700">Social Sciencs</span>
-                <span class="text-sm text-gray-500">12 Jun 2019</span>
+                <span class="text-sm text-gray-500">10/5/2022</span>
               </div>
               <div class="md:flex-grow">
                 <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Social Science Free Download From Here</h2>
                 <p class="leading-relaxed">This Page you can find all Chapters of Social Science notes</p>
-                <a onclick="document.location='Error Page.html'" class="text-indigo-500 inline-flex items-center mt-4">Download
+                <a href="Error Page.html" class="text-indigo-500 inline-flex items-center mt-4">Download
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -99,9 +99,9 @@
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
                 <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
               </svg>
-              <span class="ml-3 text-xl">Spipixel</span>
+              <span class="ml-3 text-xl"><a href="index.html">Spipixel</a></span>
             </a>
-            <p class="mt-2 text-sm text-gray-500">About</p>
+            <p class="mt-2 text-sm text-gray-500"><a href="About.html">About</a></p>
           </div>
           <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
             <div class="lg:w-1/4 md:w-1/2 w-full px-4">
@@ -114,7 +114,7 @@
                   <a href="https://www.instagram.com/spipixel12/" class="text-gray-600 hover:text-gray-800">Instagram</a>
                 </li>
                 <li>
-                  <a onclick="document.location='Error Page.html'" class="text-gray-600 hover:text-gray-800">Facebook</a>
+                  <a href="Error Page.html" class="text-gray-600 hover:text-gray-800">Facebook</a>
                 </li>
                 <li>
                   <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
@@ -125,16 +125,16 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a onclick="document.location='index.html'" class="text-gray-600 hover:text-gray-800">Home</a>
+                  <a href="index.html" class="text-gray-600 hover:text-gray-800">Home</a>
                 </li>
                 <li>
-                  <a onclick="document.location='Contact.html'" class="text-gray-600 hover:text-gray-800">Contact</a>
+                  <a href="Contact.css" class="text-gray-600 hover:text-gray-800">Contact</a>
                 </li>
                 <li>
-                  <a onclick="document.location='Shop.html'" class="text-gray-600 hover:text-gray-800">Shop</a>
+                  <a href="Shop.html" class="text-gray-600 hover:text-gray-800">Shop</a>
                 </li>
                 <li>
-                  <a onclick="document.location='About.html'" class="text-gray-600 hover:text-gray-800">About</a>
+                  <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
                 </li>
               </nav>
             </div>
@@ -142,16 +142,16 @@
               <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">Team</h2>
               <nav class="list-none mb-10">
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Spipixel</a>
+                  <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
                 </li>
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Spipixel</a>
+                  <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
                 </li>
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Spipixel</a>
+                  <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
                 </li>
                 <li>
-                  <a class="text-gray-600 hover:text-gray-800">Spipixel</a>
+                  <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
                 </li>
               </nav>
             </div>
@@ -177,12 +177,6 @@
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
                   <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                   <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                </svg>
-              </a>
-              <a class="ml-3 text-gray-500">
-                <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewbox="0 0 24 24">
-                  <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-                  <circle cx="4" cy="4" r="2" stroke="none"></circle>
                 </svg>
               </a>
             </span>
