--- a/Shop.html
+++ b/Shop.html
@@ -15,14 +15,14 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
-        <span href="index.html" class="ml-3 text-xl">Spipixel</span>
+        <span class="ml-3 text-xl"><a href="">Spipixel</a></span>
       </a>
       <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
+        <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>
         <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
         <a href="Contact.html" class="mr-5 hover:text-gray-900">Contact</a>
         <a href="Shop.html" class="mr-5 hover:text-gray-900">Shop</a>
-        <a href="About.html" class="mr-5 hover:text-gray-900">About
-        </a>
+        <a href="About.html" class="mr-5 hover:text-gray-900">About</a>
       </nav>
       <button onclick="document.location='SignIn.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
