--- a/index.html
+++ b/index.html
@@ -9,24 +9,20 @@
     <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 <body>
-  <div class="container">
-    <div class="circle11"></div>
-    <div class="circle22"></div>
-</div>
     <header class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span href="index.html" class="ml-3 text-xl">Spipixel</span>
+            <span class="ml-3 text-xl"><a href="">Spipixel</a></span>
           </a>
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
+            <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>
             <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
             <a href="Contact.html" class="mr-5 hover:text-gray-900">Contact</a>
             <a href="Shop.html" class="mr-5 hover:text-gray-900">Shop</a>
-            <a href="About.html" class="mr-5 hover:text-gray-900">About
-            </a>
+            <a href="About.html" class="mr-5 hover:text-gray-900">About</a>
           </nav>
           <button onclick="document.location='SignIn.html'" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Sign in
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
@@ -35,6 +31,22 @@
           </button>
         </div>
       </header>
+      <section class="text-gray-600 body-font">
+        <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+          <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+            <img class="object-cover object-center rounded" alt="hero" src="Youtube.jpg">
+          </div>
+          <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Youtube Contents
+              <br class="hidden lg:inline-block">tutorial video on this channel
+            </h1>
+            <p class="mb-8 leading-relaxed">I hope this video tutorial is helpful for you , i cover C , Python or HTML Content I will try to cover more contents in future</p>
+            <div class="flex justify-center">
+              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="VideoPage.html">View pages</a></button>
+            </div>
+          </div>
+        </div>
+      </section>
 <form>
     <section class="text-gray-600 body-font overflow-hidden">
         <div class="container px-5 py-24 mx-auto">
