--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Feedback</title>
     <link rel="stylesheet" type="text/css" href="Contact.css">
 </head>
 <body>
@@ -17,12 +17,12 @@
             <span>Enter your problem or message with email</span>
         </h3>
         <label for="email">Email</label>
-        <input type="email" placeholder="Enter email" id="email" name="Email">
+        <input type="email" placeholder="Enter email" id="email" name="Email" required>
 
         <label class="message" for="message">Message</label>
-        <input type="message" placeholder="Enter message" id="message" name="Message">
+        <input type="message" placeholder="Enter message" id="message" name="Message" required>
 
-        <button>Login</button>
+        <button>Sumbit Message</button>
         <h4>To contact Spipixel team you can follow this gmail<a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJqZhffTHRTtMkqCMctJBbHSNVWGxMtZPKQCrzmtJCQznfWMsBxvFkvxMPcHDZfFKSJNTLq"> techdevloper02@gmail.com</a> </h4>
         <h5>To Back<a href="index.html"> In Home Page</a></h5>
     </form>
@@ -33,7 +33,7 @@
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
+          .then(response => alert("Thanks for Feedback if your feedback is helpful for us so we can apply your feedback in our website"))
             .catch(error => console.error('Error!', error.message))
         })
 </script>    
