--- a/Shop.html
+++ b/Shop.html
@@ -87,11 +87,9 @@
                 <div class="flex ml-6 items-center">
                   <span class="mr-3">Versions</span>
                   <div class="relative">
-                    <select class="rounded border appearance-none border-gray-300 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base pl-3 pr-10">
-                      <option>Latest</option>
-                      <option>Not available</option>
-                      <option>Not available</option>
-                      <option>Not available</option>
+                    <select name="links" id="" size="1" onchange="document.location.href=this.value;" class="rounded border appearance-none border-gray-300 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base pl-3 pr-10">
+                      <option value="Shop.html">Latest</option>
+                      <option value="ProductError.html">Not available</option>
                     </select>
                     <span class="absolute right-0 top-0 h-full w-10 text-center text-gray-600 pointer-events-none flex items-center justify-center">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4" viewbox="0 0 24 24">
