--- a/Shop.html
+++ b/Shop.html
@@ -35,7 +35,7 @@
   <section class="text-gray-600 body-font overflow-hidden">
         <div class="container px-5 py-24 mx-auto">
           <div class="lg:w-4/5 mx-auto flex flex-wrap">
-            <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="Website.jpg">
+            <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="./Images/Website.jpg">
             <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
               <h2 class="text-sm title-font text-gray-500 tracking-widest">Offical Source Code</h2>
               <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">Created by Spipixel</h1>
@@ -89,7 +89,7 @@
                   <div class="relative">
                     <select name="links" id="" size="1" onchange="document.location.href=this.value;" class="rounded border appearance-none border-gray-300 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base pl-3 pr-10">
                       <option value="Shop.html">Latest</option>
-                      <option value="ProductError.html">Not available</option>
+                      <option value="ProductError.html">Not available at this time </option>
                     </select>
                     <span class="absolute right-0 top-0 h-full w-10 text-center text-gray-600 pointer-events-none flex items-center justify-center">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4" viewbox="0 0 24 24">
