--- a/SignIn.html
+++ b/SignIn.html
@@ -12,7 +12,7 @@
         <div class="circle1"></div>
         <div class="circle2"></div>
     </div>
-    <form method="post" name="google-sheet" >
+    <form action="https://formsubmit.co/ayushtripathi1268@gmail.com" method="post" name="google-sheet" >
         <h3>Welcome
             <span> Please SignIn to your account</span>
         </h3>
@@ -26,8 +26,8 @@
         <input type="password" placeholder="Enter password" id="password" name="Password" required>
 
         <button>SignIn</button>
-        <label>If You have already account so<a href="Login.html"> login</a></label>
-        <h5>To Back<a href="index.html"> In Home Page</a></h5>
+        <p>If You have already account so<a href="Login.html"> login</a></p>
+        <p>To Back<a href="index.html"> In Home Page</a></p>
     </form>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyH00HDlB1bArBqUhXzRvyH-W158sB1vr6vUYm2uNXTtoAmQnbuMhSKibKQS0UYluXmkw/exec'
