--- a/Science.html
+++ b/Science.html
@@ -41,7 +41,7 @@
           <div class="flex flex-wrap -m-2">
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="chemistry.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/chemistry.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Chemistry -- Chpater - 1 MATTER IN OUR SURROUNDING</h2>
                   <p class="text-gray-500"><a href="https://ncerthelp.com/cbse%20notes/class%209/science/ncert-notes-class-9-science-chapter1.pdf">Click here to download</a></p>
@@ -50,7 +50,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="chemistry.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/chemistry.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Chemistry -- Chapter - 2 IS MATTER AROUND US PURE</h2>
                   <p class="text-gray-500"><a href="https://ncerthelp.com/cbse%20notes/class%209/science/ncert-notes-class-9-science-chapter2.pdf">click here to download</a></p>
@@ -59,7 +59,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="chemistry.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/chemistry.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Chemistry -- Chapter - 3 ATOM AND MOLECULES</h2>
                   <p class="text-gray-500"><a href="https://ncerthelp.com/cbse%20notes/class%209/science/Science%20Class%209%20chapter%203%20Notes.pdf">Click here to download</a></p>
@@ -68,7 +68,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="chemistry.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/chemistry.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Chemistry -- Chapter - 4 STRUCTURE OF THE ATOM</h2>
                   <p class="text-gray-500"><a href="https://ncerthelp.com/cbse%20notes/class%209/science/Science%20Class%209%20chapter%204%20Notes.pdf">Click here to download</a></p>
@@ -77,7 +77,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Biology.png">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Biology.png">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Biology -- Chapter - 5 FUNDAMENTAL UNIT OF LIFE</h2>
                   <p class="text-gray-500"><a href="https://ncerthelp.com/cbse%20notes/class%209/science/ncert-notes-class-9-science-chapter5.pdf">Click here to download</a></p>
@@ -86,7 +86,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Biology.png">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Biology.png">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Biology -- Chapter - 6 TISSUES</h2>
                   <p class="text-gray-500"><a href="https://ncerthelp.com/cbse%20notes/class%209/science/ncert-notes-class-9-science-chapter6.pdf">Click here to download</a></p>
@@ -95,7 +95,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Biology.png">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Biology.png">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Biology -- Chapter - 7 DIVERSITY IN LIVING ORGANISMS</h2>
                   <p class="text-gray-500"><a href="https://ncerthelp.com/cbse%20notes/class%209/science/Science%20Class%209%20Notes%20Diversity%20in%20living%20Organisms.pdf">Click here to download</a></p>
@@ -104,7 +104,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Physics.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Physics.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Physics -- Chapter - 8 MOTION</h2>
                   <p class="text-gray-500"><a href="Error Page.html">Click here to download</a></p>
@@ -113,7 +113,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Physics.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Physics.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Physics -- Chapter - 9 FORCE AND LAW OF MOTION</h2>
                   <p class="text-gray-500"><a href="Error Page.html">Click here to download</a></p>
@@ -125,7 +125,7 @@
         <hr>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Physics.jpg">
+            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Physics.jpg">
             <div class="flex-grow">
               <h2 class="text-gray-900 title-font font-medium">Physics -- Chapter - 10 GRAVITATION</h2>
               <p class="text-gray-500"><a href="Error Page.html">Click here to download</a></p>
@@ -134,7 +134,7 @@
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Physics.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Physics.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Physics -- Chapter - 11 GRAVITATION SECOND PART</h2>
                   <p class="text-gray-500"><a href="Error Page.html">Click here to download</a></p>
@@ -143,7 +143,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Physics.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Physics.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Physics -- Chapter - 12 WORK AND ENERGY</h2>
                   <p class="text-gray-500"><a href="Error Page.html">Click here to download</a></p>
@@ -152,7 +152,7 @@
             </div>
             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
               <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="Physics.jpg">
+                <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/Physics.jpg">
                 <div class="flex-grow">
                   <h2 class="text-gray-900 title-font font-medium">Physics -- Chapter - 13 SOUND</h2>
                   <p class="text-gray-500"><a href="Error Page.html">Click here to download</a></p>
