--- a/VideoPage.html
+++ b/VideoPage.html
@@ -36,7 +36,7 @@
           <div class="flex flex-wrap -m-4">
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Youtube1.jpg" alt="blog">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./Images/Youtube1.jpg" alt="blog">
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black-400 mb-1">Youtube Video</h2>
                   <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Spipixel</h1>
@@ -65,7 +65,7 @@
             </div>
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Youtube1.jpg" alt="blog">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./Images/Youtube1.jpg" alt="blog">
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black-400 mb-1">Youtube Video</h2>
                   <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Spipixel</h1>
@@ -94,7 +94,7 @@
             </div>
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Youtube1.jpg" alt="blog">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./Images/Youtube1.jpg" alt="blog">
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black-400 mb-1">Youtube Video</h2>
                   <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Spipixel</h1>
