--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
               </div>
               <div class="md:flex-grow">
-                <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE MAths Free Download From Here</h2>
-                <p class="leading-relaxed">This Page you can find all Chapters of MAths notes</p>
+                <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Maths Free Download From Here</h2>
+                <p class="leading-relaxed">This Page you can find all Chapters of Maths notes</p>
                 <a href="Error Page.html"  class="text-indigo-500 inline-flex items-center mt-4">Download
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
