--- a/Login.html
+++ b/Login.html
@@ -12,7 +12,7 @@
         <div class="circle1"></div>
         <div class="circle2"></div>
     </div>
-    <form method="post" name="google-sheet" >
+    <form method="post" name="google-sheet" action="action.php" >
         <h3>Welcome
             <span> Please LogIn to your account</span>
         </h3>
