--- a/Blog.html
+++ b/Blog.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="Background.css">
+    <title>Blog</title>
 </head>
 <body>
     <header class="text-gray-600 body-font">
@@ -19,7 +19,6 @@
           </a>
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>
-            <a href="Blog.html" class="mr-5 hover:text-gray-900">Blog</a>
             <a href="https://www.youtube.com/channel/UC3P1GCUicXUjYcbtvrFrC0A" class="mr-5 hover:text-gray-900">My youtube channel</a>
             <a href="Contact.html" class="mr-5 hover:text-gray-900">Contact</a>
             <a href="Shop.html" class="mr-5 hover:text-gray-900">Shop</a>
@@ -32,78 +31,16 @@
           </button>
         </div>
       </header>
-      <section class="text-gray-600 body-font">
-        <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-          <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-            <img class="object-cover object-center rounded" src="./Images/Youtube.jpg" alt="Youtube" >
-          </div>
-          <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Youtube Contents
-              <br class="hidden lg:inline-block">tutorial video on this channel
-            </h1>
-            <p class="mb-8 leading-relaxed">I hope this video tutorial is helpful for you , i cover C , Python or HTML Content I will try to cover more contents in future</p>
-            <div class="flex justify-center">
-              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="VideoPage.html">View pages</a></button>
-            </div>
-          </div>
-        </div>
-      </section>
-<form>
-    <section class="text-gray-600 body-font overflow-hidden">
-        <div class="container px-5 py-24 mx-auto">
-          <div class="-my-8 divide-y-2 divide-gray-100">
-            <div class="py-8 flex flex-wrap md:flex-nowrap">
-              <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                <span class="font-semibold title-font text-gray-700">Science</span>
-                <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
-              </div>
-              <div class="md:flex-grow">
-                <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Science Free Download From Here</h2>
-                <p class="leading-relaxed">This Page you can find all Chapters of Science notes </p>
-                <a href="Science.html" class="text-indigo-500 inline-flex items-center mt-4">Download
-                  <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M5 12h14"></path>
-                    <path d="M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-            <div class="py-8 flex flex-wrap md:flex-nowrap">
-              <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                <span class="font-semibold title-font text-gray-700">Maths</span>
-                <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
-              </div>
-              <div class="md:flex-grow">
-                <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Maths Free Download From Here</h2>
-                <p class="leading-relaxed">This Page you can find all Chapters of Maths notes</p>
-                <a href="Error Page.html"  class="text-indigo-500 inline-flex items-center mt-4">Download
-                  <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M5 12h14"></path>
-                    <path d="M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-            <div class="py-8 flex flex-wrap md:flex-nowrap">
-              <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                <span class="font-semibold title-font text-gray-700">Social Sciencs</span>
-                <span class="text-sm text-gray-500">10/5/2022</span>
-              </div>
-              <div class="md:flex-grow">
-                <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Social Science Free Download From Here</h2>
-                <p class="leading-relaxed">This Page you can find all Chapters of Social Science notes</p>
-                <a href="Error Page.html" class="text-indigo-500 inline-flex items-center mt-4">Download
-                  <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M5 12h14"></path>
-                    <path d="M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </form>
+      <h1 class="sm:text-4xl text-4xl text-9xl font-medium title-font mb-4 text-gray-900 text-left">Atricle</h1>
+<pre class="font-medium title-font mb-4 text-black-900">
+<i><b>
+Using this Website you can download anything that you want
+just go in Contact tab and write a message with valid email 
+every weekend we check our database and we response you message
+in weekend.
+</b>
+</i>
+</pre>
 <hr>
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
@@ -196,5 +133,6 @@
           </div>
         </div>
       </footer>
+
 </body>
 </html>
